chore: add og image

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,15 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Interactive Weather App built with React, Apollo, GraphQL, and Chakra UI" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <meta property="og:image" content="https://github.com/bensahagun/oh-weather/raw/main/preview.png?raw=true" />
     <title>Oh! Weather - Interactive Weather App by @bensahagun</title>
   </head>
   <body>
